@@ -62,7 +62,19 @@ runTestsStage(['installMavenParameters', 'testMavenParameters']) {
                 testMavenParameters: '#testMavenParameters'
         )
         job(
-                key: 'UTJ7',
+                key: 'STYLE',
+                name: 'Checkstyle'
+        ) {
+            commonRequirements()
+            checkoutDefaultRepositoryTask()
+            mavenTask(
+                    description: 'Run Checkstyle',
+                    goal: 'verify -Pcheckstyle -Pit -PpluginLifecycle -Pwired',
+                    environmentVariables: ''
+            )
+        }
+        job(
+                key: 'UTJ',
                 name: 'Unit Tests'
         ) {
             commonRequirements()
@@ -87,10 +99,11 @@ runTestsStage(['installMavenParameters', 'testMavenParameters']) {
         ) {
             commonRequirements()
             checkoutDefaultRepositoryTask()
+            setupVncTask()
             mavenTestTask(
                     description: 'Run QUnit Tests using Karma',
-                    goal: '-pl jsapi package -Pkarma-tests #testMavenParameters',
-                    environmentVariables: ''
+                    goal: '-pl jsapi test -Pkarma-tests #testMavenParameters',
+                    environmentVariables: 'DISPLAY=":20" MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m" CHROME_BIN=/usr/bin/google-chrome'
             )
             artifactDefinition(
                     name: 'Karma Test Results',
@@ -108,7 +121,7 @@ runTestsStage(['installMavenParameters', 'testMavenParameters']) {
             checkoutDefaultRepositoryTask()
             mavenTask(
                     description: 'Build Plugin and Generate Javadoc',
-                    goal: 'install -DskipTests javadoc:javadoc #installMavenParameters',
+                    goal: 'install javadoc:javadoc -Dmaven.test.skip #installMavenParameters',
             )
         }
         job(
@@ -149,7 +162,7 @@ runTestsStage(['installMavenParameters', 'testMavenParameters']) {
             checkoutDefaultRepositoryTask()
             mavenTask(
                     description: 'Build Developer Documentation',
-                    goal: 'install site -DskipTests #installMavenParameters',
+                    goal: 'install site -Dmaven.test.skip #installMavenParameters',
             )
             artifactDefinition(
                     name: 'Documentation',
@@ -182,66 +195,17 @@ testJobsForConfluence(['installMavenParameters', 'testMavenParameters']) {
             installMavenParameters: '#installMavenParameters',
             testMavenParameters: '#testMavenParameters'
     )
-    integrationTestJob(
-            key: 'CITCM',
-            product: 'Confluence',
-            testGroup: 'confluence-common-misc',
-            groupName: 'Common Misc',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    integrationTestJob(
-            key: 'CITCI',
-            product: 'Confluence',
-            testGroup: 'confluence-common-iframe',
-            groupName: 'Common iframe',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    integrationTestJob(
-            key: 'CITCL',
-            product: 'Confluence',
-            testGroup: 'confluence-common-lifecycle',
-            groupName: 'Common Lifecycle',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    confluenceIntegrationTestJob(
-            key: 'CITM',
-            testGroup: 'confluence-misc',
-            groupName: 'Misc',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    confluenceIntegrationTestJob(
-            key: 'CITI',
-            testGroup: 'confluence-iframe',
-            groupName: 'iframe',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    confluenceIntegrationTestJob(
-            key: 'CITT',
-            testGroup: 'confluence-item',
-            groupName: 'Item',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    confluenceIntegrationTestJob(
-            key: 'CITJF',
-            testGroup: 'confluence-jsapi',
-            groupName: 'JS API FF',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    integrationTestJob(
-            key: 'CITJFC',
-            product: 'Confluence',
-            testGroup: 'confluence-common-jsapi',
-            groupName: 'JS API Common FF',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
+    confluenceCommonIntegrationTestBatch(numberOfBatches: '3', currentBatchNumber: '1', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceCommonIntegrationTestBatch(numberOfBatches: '3', currentBatchNumber: '2', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceCommonIntegrationTestBatch(numberOfBatches: '3', currentBatchNumber: '3', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+
+    confluenceIntegrationTestBatch(numberOfBatches: '6', currentBatchNumber: '1', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceIntegrationTestBatch(numberOfBatches: '6', currentBatchNumber: '2', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceIntegrationTestBatch(numberOfBatches: '6', currentBatchNumber: '3', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceIntegrationTestBatch(numberOfBatches: '6', currentBatchNumber: '4', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceIntegrationTestBatch(numberOfBatches: '6', currentBatchNumber: '5', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    confluenceIntegrationTestBatch(numberOfBatches: '6', currentBatchNumber: '6', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    
     confluenceIntegrationTestJob(
             key: 'CITJC',
             testGroup: 'confluence-jsapi',
@@ -249,20 +213,13 @@ testJobsForConfluence(['installMavenParameters', 'testMavenParameters']) {
             installMavenParameters: '#installMavenParameters',
             testMavenParameters: '#testMavenParameters -Dwebdriver.browser=chrome'
     )
-    integrationTestJob(
+    commonIntegrationTestJob(
             key: 'CITJCC',
             product: 'Confluence',
             testGroup: 'confluence-common-jsapi',
             groupName: 'JS API Common Chrome',
             installMavenParameters: '#installMavenParameters',
             testMavenParameters: '#testMavenParameters -Dwebdriver.browser=chrome'
-    )
-    confluenceIntegrationTestJob(
-            key: 'CITA',
-            testGroup: 'confluence-macro',
-            groupName: 'Macro',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
     )
 }
 
@@ -281,66 +238,17 @@ testJobsForJIRA(['installMavenParameters', 'testMavenParameters']) {
             installMavenParameters: '#installMavenParameters',
             testMavenParameters: '#testMavenParameters'
     )
-    integrationTestJob(
-            key: 'JITCM',
-            product: 'JIRA',
-            testGroup: 'jira-common-misc',
-            groupName: 'Common Misc',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    integrationTestJob(
-            key: 'JITCI',
-            product: 'JIRA',
-            testGroup: 'jira-common-iframe',
-            groupName: 'Common iframe',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    integrationTestJob(
-            key: 'JITCL',
-            product: 'JIRA',
-            testGroup: 'jira-common-lifecycle',
-            groupName: 'Common Lifecycle',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    jiraIntegrationTestJob(
-            key: 'JITM',
-            testGroup: 'jira-misc',
-            groupName: 'Misc',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    jiraIntegrationTestJob(
-            key: 'JITI',
-            testGroup: 'jira-iframe',
-            groupName: 'iframe',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    jiraIntegrationTestJob(
-            key: 'JITT',
-            testGroup: 'jira-item',
-            groupName: 'Item',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    jiraIntegrationTestJob(
-            key: 'JITJF',
-            testGroup: 'jira-jsapi',
-            groupName: 'JS API FF',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
-    integrationTestJob(
-            key: 'JITJFC',
-            testGroup: 'jira-common-jsapi',
-            product: 'JIRA',
-            groupName: 'JS API FF Common',
-            installMavenParameters: '#installMavenParameters',
-            testMavenParameters: '#testMavenParameters'
-    )
+
+    jiraCommonIntegrationTestBatch(numberOfBatches: '3', currentBatchNumber: '1', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    jiraCommonIntegrationTestBatch(numberOfBatches: '3', currentBatchNumber: '2', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    jiraCommonIntegrationTestBatch(numberOfBatches: '3', currentBatchNumber: '3', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+
+    jiraIntegrationTestBatch(numberOfBatches: '5', currentBatchNumber: '1', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    jiraIntegrationTestBatch(numberOfBatches: '5', currentBatchNumber: '2', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    jiraIntegrationTestBatch(numberOfBatches: '5', currentBatchNumber: '3', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    jiraIntegrationTestBatch(numberOfBatches: '5', currentBatchNumber: '4', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+    jiraIntegrationTestBatch(numberOfBatches: '5', currentBatchNumber: '5', installMavenParameters: '#installMavenParameters', testMavenParameters: '#testMavenParameters')
+
     jiraIntegrationTestJob(
             key: 'JITJC',
             testGroup: 'jira-jsapi',
@@ -348,7 +256,7 @@ testJobsForJIRA(['installMavenParameters', 'testMavenParameters']) {
             installMavenParameters: '#installMavenParameters',
             testMavenParameters: '#testMavenParameters -Dwebdriver.browser=chrome'
     )
-    integrationTestJob(
+    commonIntegrationTestJob(
             key: 'JITJCC',
             testGroup: 'jira-common-jsapi',
             product: 'JIRA',
@@ -370,7 +278,7 @@ lifecycleTestJob(['key', 'product', 'testGroup', 'installMavenParameters', 'test
         )
         mavenTestTask(
                 description: 'Run Wired Lifecycle Tests for #product',
-                goal: 'verify -pl tests/plugin-lifecycle-tests -PpluginLifecycle -DtestGroups=#testGroup -DskipUnits -DskipITs=false #testMavenParameters',
+                goal: 'verify -pl tests/plugin-lifecycle-tests -PpluginLifecycle -DtestGroups=#testGroup -DskipITs=false #testMavenParameters',
                 environmentVariables: 'MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"',
         )
         mavenTask(
@@ -400,7 +308,7 @@ wiredTestJob(['key', 'product', 'testGroup', 'installMavenParameters', 'testMave
         )
         mavenTestTask(
                 description: 'Run Wired Tests for #product',
-                goal: 'verify -pl tests/wired-tests -Pwired -DtestGroups=#testGroup -DskipITs=false -DskipUnits #testMavenParameters',
+                goal: 'verify -pl tests/wired-tests -Pwired -DtestGroups=#testGroup -DskipITs=false #testMavenParameters',
                 environmentVariables: 'MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"',
         )
         mavenTask(
@@ -418,7 +326,49 @@ wiredTestJob(['key', 'product', 'testGroup', 'installMavenParameters', 'testMave
     }
 }
 
-integrationTestJob(['key', 'product', 'testGroup', 'groupName', 'installMavenParameters', 'testMavenParameters']) {
+jiraCommonIntegrationTestBatch(['numberOfBatches', 'currentBatchNumber', 'installMavenParameters', 'testMavenParameters']) {
+    commonIntegrationTestJob(
+            key: 'JITC#currentBatchNumber',
+            product: 'JIRA',
+            testGroup: 'jira-common-batches',
+            groupName: 'Common Batch #currentBatchNumber',
+            installMavenParameters: '#installMavenParameters',
+            testMavenParameters: '#testMavenParameters -DtestBatchRunner.numberOfBatches=#numberOfBatches -DtestBatchRunner.currentBatchNumber=#currentBatchNumber'
+    )
+}
+
+confluenceCommonIntegrationTestBatch(['numberOfBatches', 'currentBatchNumber', 'installMavenParameters', 'testMavenParameters']) {
+    commonIntegrationTestJob(
+            key: 'CITC#currentBatchNumber',
+            product: 'Confluence',
+            testGroup: 'confluence-common-batches',
+            groupName: 'Common Batch #currentBatchNumber',
+            installMavenParameters: '#installMavenParameters',
+            testMavenParameters: '#testMavenParameters -DtestBatchRunner.numberOfBatches=#numberOfBatches -DtestBatchRunner.currentBatchNumber=#currentBatchNumber'
+    )
+}
+
+jiraIntegrationTestBatch(['numberOfBatches', 'currentBatchNumber', 'installMavenParameters', 'testMavenParameters']) {
+    jiraIntegrationTestJob(
+            key: 'JIT#currentBatchNumber',
+            testGroup: 'jira-batches',
+            groupName: 'Batch #currentBatchNumber',
+            installMavenParameters: '#installMavenParameters',
+            testMavenParameters: '#testMavenParameters -DtestBatchRunner.numberOfBatches=#numberOfBatches -DtestBatchRunner.currentBatchNumber=#currentBatchNumber'
+    )
+}
+
+confluenceIntegrationTestBatch(['numberOfBatches', 'currentBatchNumber', 'installMavenParameters', 'testMavenParameters']) {
+    confluenceIntegrationTestJob(
+            key: 'CIT#currentBatchNumber',
+            testGroup: 'confluence-batches',
+            groupName: 'Batch #currentBatchNumber',
+            installMavenParameters: '#installMavenParameters',
+            testMavenParameters: '#testMavenParameters -DtestBatchRunner.numberOfBatches=#numberOfBatches -DtestBatchRunner.currentBatchNumber=#currentBatchNumber'
+    )
+}
+
+commonIntegrationTestJob(['key', 'product', 'testGroup', 'groupName', 'installMavenParameters', 'testMavenParameters']) {
     projectIntegrationTestJob(
         key: '#key',
         product: '#product',
@@ -467,7 +417,7 @@ projectIntegrationTestJob(['key', 'product', 'testGroup', 'groupName', 'installM
         )
         mavenTestTask(
                 description: 'Run Integration Tests for #product #groupName',
-                goal: 'verify -pl #project -Pit -DtestGroups=#testGroup -DskipUnits -DskipITs=false #testMavenParameters',
+                goal: 'verify -pl #project -Pit -DtestGroups=#testGroup -DskipITs=false #testMavenParameters',
                 environmentVariables: 'DISPLAY=":20" MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m" CHROME_BIN=/usr/bin/google-chrome',
         )
         defineWebDriverOutputArtefact(
@@ -506,7 +456,7 @@ checkoutDefaultRepositoryTask() {
 mavenInstallTask(['installMavenParameters']) {
     mavenTask(
             description: 'Install',
-            goal: 'clover2:setup install -Pclover -DskipUnits #installMavenParameters'
+            goal: 'clover2:setup install -Pclover -Dmaven.test.skip #installMavenParameters'
     )
 }
 
